# flash-hog

./: README.md  pyproject.toml
fhog/: pallas_bwdbwd.py  test_bwdbwd.py  triton_bwdbwd.py
fhog/jax/: _attention_impl.py  _pallas_gpu.py  _pallas_gpu_kernel.py  attention.py
flash_hog/: __init__.py
flash_hog/_jax_refs/: compare.py  flash_impl.py  flash_impl_herman.py  jax_impl.py  torch_impl.py
flash_hog/_utils/: jax_utils.py
flash_hog/csrc/tk_bwdbwd/: build.sh  ffi.cu
flash_hog/jax/: _attention_impl.py  _pallas_gpu.py  _pallas_gpu_kernel.py  _tk_gpu.py  attention.py  edited_attention_impl.py
references/: benchhhh.py  mgpu_tests.py  pallas_attention.py  test_bwdbwd.py  triton_bwdbwd.py  triton_flash.py
tests/: test_jax_fhog.py
