[project]
name = "flash-hog"
version = "0.3.2"
description = "Kernels for higher order gradients of Flash Attention."
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "absl-py>=2.4.0",
    "chex>=0.1.91",
    "einops>=0.8.1",
    "jax[cuda13]>=0.9.0; sys_platform == 'linux'",
    "jax>=0.9.0; sys_platform == 'darwin'",
]

[build-system]
requires = ["uv_build>=0.9.5,<0.10.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "flash_hog"
module-root = ""


[tool.uv]
package = true
python-preference = "only-managed"
required-environments = [
    "sys_platform == 'linux' and platform_machine == 'aarch64'", # Grace-Blackwell
    "sys_platform == 'linux' and platform_machine == 'x86_64'",
    "sys_platform == 'darwin'",
]
index-strategy = "unsafe-best-match"

[project.scripts]
main = "flash_hog.main:main"

# [tool.uv.extra-build-dependencies]
# flash-attn = [
#     { requirement = "torch", match-runtime = true },
#     "packaging",
#     "wheel",
# ]

# [tool.uv.extra-build-variables] # To build on GB10
# flash-attn = { CUDA_HOME = "/usr/local/cuda", FLASH_ATTENTION_TRITON_AMD_ENABLE = "TRUE", MAX_JOBS = "10", FLASH_ATTN_CUDA_ARCHS = "120" }

[tool.uv.sources]
torch = { index = "pytorch-cu130" }

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"


[tool.ruff]
line-length = 180

[tool.ruff.lint]
ignore = ["F722"]

extend-select = ["ARG005"]

[dependency-groups]
dev = [
    "equinox>=0.13.4",
    "ipdb>=0.13.13",
    "ipython>=9.10.0",
    "pytest>=9.0.2",
    "ruff>=0.15.4",
    # "torch>=2.9.0",
    "ty>=0.0.19",
]
