[project]
name = "flash-hog"
version = "0.5.0"
description = "Kernels for higher order gradients of Flash Attention."
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "chex>=0.1.91",
    "einops>=0.8.1",
    "jax[cuda13]>=0.9.0; sys_platform == 'linux'",
    "jax>=0.9.0; sys_platform == 'darwin'",
]

[build-system]
requires = ["uv_build>=0.10.6,<0.11.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "flash_hog"
module-root = ""


[tool.uv]
package = true
python-preference = "only-managed"
required-environments = [
    "sys_platform == 'linux' and platform_machine == 'aarch64'", # Grace-Blackwell
    "sys_platform == 'linux' and platform_machine == 'x86_64'",
    "sys_platform == 'darwin'",                                  # Allow installs on MacOS
]
index-strategy = "unsafe-best-match"

[project.scripts]
main = "flash_hog.main:main"


[tool.ruff]
line-length = 180

[tool.ruff.lint]
ignore = ["F722"]

extend-select = ["ARG005"]

[tool.pytest.ini_options]
addopts = "--pdbcls=IPython.terminal.debugger:TerminalPdb"

[dependency-groups]
dev = [
    "equinox>=0.13.4",
    "ipdb>=0.13.13",
    "ipython>=9.10.0",
    "pytest>=9.0.2",
    "ruff>=0.15.4",
    "ty>=0.0.19",
]
